# vbcsr

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  devplan.md  generate_benchmark_report.py  pyproject.toml  test_block_csr  test_complex_dist_vector  test_dist_graph  test_robustness
.github/workflows/: cd.yml
cmake/: FindMKL.cmake
doc/: advanced_installation.md  api_reference.md  developer_guide.md  user_guide.md
examples/: ex01_basic_serial.py  ex02_distributed.py  ex03_scipy_solver.py  ex04_complex_numbers.py  ex05_submatrix.py  ex06_spmm.py  ex07_graphene_purification.py  ex08_graphene_dos.py  ex09_graphene_dynamics.py  ex10_variable_pde.py
recipe/: build.sh  meta.yaml
tests/: benchmark_large_scale.py  benchmark_spmm_complex.cpp  test_binding.py  test_scipy_adapter.py  test_spmf.py  test_spmm.cpp  test_spmm.py  test_vbcsr.py
vbcsr/: __init__.py  matrix.py  multivector.py  pybind_vbcsr.cpp  vector.py
vbcsr/core/: block_csr.hpp  block_memory_pool.hpp  dist_graph.hpp  dist_multivector.hpp  dist_vector.hpp  graphmf.hpp  kernels.hpp  lapack_types.hpp  mpi_utils.hpp  scalar_traits.hpp  submf.hpp
vbcsr/core/test/: benchmark_axpby.cpp  benchmark_dist.cpp  benchmark_spmm_complex.cpp  run_all_tests.py  test_axpby.cpp  test_axpby_diff_graph.cpp  test_backend_extensions.cpp  test_block_arena.cpp  test_block_csr.cpp  test_block_csr_export.cpp  test_complex_dist_vector.cpp  test_dist_graph.cpp  test_extract_batched_robust.cpp  test_graphmf.cpp  test_mult_graph_mismatch.cpp  test_multi_sparsity.cpp  test_pb_csr.cpp  test_robustness.cpp  test_spmm.cpp  test_subgraph.cpp
