[build-system]
requires = ["scikit-build-core>=0.8", "pybind11", "cmake>=3.15", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "vbcsr"
version = "0.1.0"
description = "Variable Block Compressed Sparse Row Matrix with MPI support"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "AGPL-3.0"}
authors = [
  {name = "zhanghao", email = "yinzhanghao.zhou@mail.mcgill.ca"},
]
dependencies = [
    "numpy",
    "scipy",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
mpi = ["mpi4py"]



[tool.scikit-build]
# Install the python package 'vbcsr'
wheel.packages = ["vbcsr"]
# CMake configuration
build.verbose = true
logging.level = "INFO"

[tool.cibuildwheel]
build-verbosity = 1
